===================
2018/12/17-19
v 6-0.621

- Changed language version to 3.2.
- Added system function for sharing function object bodies, "share_body". Related methods:
-- FunctionObject::createFromBody()
-- Engine::process_sys_share_body( FuncFoundTask& )
-- Engine::shareBody( Function&, Function& )
- Changed Function::set(Function&) to Function::set(Function&, bool) to allowing disabling scope copying.
DEV NOTE: Even for "share_body", Function::result has been copied because otherwise it could be indirectly changed via for example increment methods.
- Fixed Function::operator=() to return its own address. (Wasn't used but users might want it.)
- Fixed RefVariableStorage::operator=() to return its own address. (Wasn't used.)
- Fixed isIntegerObject() by giving it a return (of false) when the if-condition was not fulfilled.
- Fixed isDecimalNumObject() by giving it a return (of false) when the if-condition was not fulfilled.
- Fixed bug in Engine::run/lexAndParse/parse stage (in lexAndParse) to correctly handle streams that unexpectedly but correctly end.
- Changed FFIServices::setNewResult() to use setWithoutRef() instead of trying to deference without checking argument existence.
- Removed outdated comment above class Engine regarding usage of (no-longer-existent) Engine::process().
- Changed FFIServices::demandAllArgsType() to return false if "imperative" parameter is set to "true".


===================
2018/12/12, 2018/12/16
v 6-0.62

- Changed ObjectType::Decimal to ObjectType::DecimalNum.
- Added method virtual bool Object::supportsInterface(ObjectType::Value) and implementations to all built-in Object descendants.
- Removed old commented out code regarding ObjectType::Value values.
- Changed FFIServices::demandArgType() and demandAllArgsType() to use Object::supportsInterface().
- Fixed error message in FFIServices::demandAllArgsType() to use index+1.
- Cleaned up code.


===================
2018/12/4-5
v 6-0.61
